syntax = "proto3";

package kratos.api;

import "google/protobuf/descriptor.proto";
import "google/api/annotations.proto";

option go_package = "github.com/go-kratos/kratos/v2/api/proto/kratos/api;metadata";
option java_multiple_files = true;
option java_package = "com.github.kratos.api";
option objc_class_prefix = "KratosAPI";


// Metadata is api definition metadata service.
service MetadataX {
  // ListServices list the full name of all services.
  rpc ListServices (XListServicesRequest) returns (XListServicesReply)  {
      option (google.api.http) = {
        get: "/x/services",
      };
  }
  // GetServiceDesc get the full fileDescriptorSet of service.
  rpc GetServiceDesc (XGetServiceDescRequest) returns (XGetServiceDescReply)  {
      option (google.api.http) = {
        get: "/x/services/{name}",
      };
  }
}

message XListServicesRequest {}
message XListServicesReply {
  repeated string services = 1;
  repeated string methods = 2;
}

message XGetServiceDescRequest {
  string name = 1;
}

message XGetServiceDescReply {
  google.protobuf.FileDescriptorSet file_desc_set = 1;
}

